[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vis_utils"
version = "0.2"
description = "(Keops) utilities for visualization methods, plotting, and data loading utilities"
readme = "README.md"
requires-python = ">=3.7"
license = { text = "MIT" }
keywords = []
authors = []
dependencies = [
    "numpy >=1.17",
    "scikit-learn >=0.22",
    "scipy >=1.0",
    "numba >=0.49",
    "torch >=1.0",
    "pykeops >=1.4",
    "matplotlib >=3.0",
    "torchvision >=0.2.2",
    "pandas",
    "pykeops",
    "anndata",
    "requests",
    "scanpy"
]

[project.optional-dependencies]
tsne_wrapper = [
    "opentsne >=0.6.1"
]

[project.urls]
repository = "https://github.com/sdamrich/vis_utils"

[tool.setuptools]
packages = ["vis_utils"]

